--- a/Examples/Payload/Payload.csproj
+++ b/Examples/Payload/Payload.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PubSubPayload.cs" />
     <Compile Include="RequestResponsePayload.cs" />
     <Compile Include="Transport.cs" />
   </ItemGroup>
